c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_member_name_kw.c
// Can't use a keyword as a union member name

union u {
    int struct;
};